# JLClient

./: .gitignore  AGENTS.md  LICENSE  README.md  docs.md  pyproject.toml  setup.py
jarvislabs/: __init__.py  _version.py  client.py  config.py  constants.py  exceptions.py  models.py  ssh.py  transport.py
jarvislabs/cli/: app.py  commands.py  instance.py  render.py  run.py  state.py
jlclient/: README.md  httpclient.py  jarvisclient.py
research/: codex_agent_jlcli_failures.md
tests/: conftest.py  e2e_cli.sh  e2e_live.py  test_cli_filesystem_prompts.py  test_cli_instance_exec.py  test_cli_instance_prompts.py  test_cli_instance_transfer.py  test_cli_run.py  test_cli_scripts_prompts.py  test_client.py  test_ssh.py
