[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[project]
name = "jarvislabs"
version = "0.1.0"
description = "CLI and SDK for JarvisLabs.ai GPU cloud"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Team Jarvislabs.ai", email = "hello@jarvislabs.ai" }]
keywords = ["gpu", "cloud", "jarvislabs", "cli", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.10",
    "typer>=0.12",
    "rich>=13.0",
    "platformdirs>=4.0",
    "tomli-w>=1.0",
]

[project.scripts]
jl = "jarvislabs.cli.app:main"

[project.urls]
Homepage = "https://jarvislabs.ai"
Repository = "https://github.com/jarvislabsai/jlclient"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
